# mskw-microservice

./: .env  .gitignore  Cargo.toml  build.rs
compute/: .env  Cargo.toml
compute/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  utils.rs
core/src/services/: json_service.rs  mod.rs  node.rs  ping_pong.rs
gate/: .env  Cargo.toml
gate/src/: main.rs
gate/src/schedule/: status.rs
gate/src/services/: json_service.rs  mod.rs  node.rs
protos/: Cargo.toml  json_service.proto  node.proto  ping_pong.proto  service_discovery.proto
protos/src/: json_service.rs  json_service_grpc.rs  lib.rs  node.rs  node_grpc.rs  ping_pong.rs  ping_pong_grpc.rs  service_discovery.rs  service_discovery_grpc.rs
