[package]
name = "compute"
version = "0.1.0"
authors = ["zyc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos"}
core = {path = "../core"}
grpcio = "0.4"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
dotenv = "0.13"
