[package]
name = "gate"
version = "0.1.0"
authors = ["Eadral <a250014238@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos"}
core = {path = "../core"}
dotenv = "0.13"
actix-web = "1.0"
log = "0.4"
pretty_env_logger = "0.2"
uuid = "0.7"
grpcio = "0.4"
futures = "0.1"